--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = "1.7.10"
+    ext.nav_version = '2.4.1'
+    ext.hilt_version = '2.43.2'
+    ext.detekt_version = '1.18.0'
+    ext.paging_version = '3.1.1'
+    ext.coroutines_version = '1.6.4'
+}
+
 plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.43.2' apply false
 }
