--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:name=".WingsJourneyApplication"
         android:theme="@style/Theme.WingsJourney"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".gameslist.presentation.MainActivity"
