--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.7.10"
-    ext.nav_version = '2.4.1'
+    ext.nav_version = '2.5.0'
     ext.hilt_version = '2.43.2'
     ext.detekt_version = '1.18.0'
     ext.paging_version = '3.2.0'
     ext.coroutines_version = '1.6.4'
+
+    dependencies{
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
 }
 
 plugins {
