--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.7.10"
     ext.nav_version = '2.5.0'
-    ext.hilt_version = '2.43.2'
+    ext.hilt_version = '2.48'
     ext.detekt_version = '1.18.0'
     ext.paging_version = '3.2.0'
     ext.coroutines_version = '1.6.4'
@@ -15,6 +15,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.43.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version "${hilt_version}" apply false
+    id "com.google.devtools.ksp" version "1.8.10-1.0.9" apply false
 }
