--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,69 +49,47 @@ android {
 }
 
 dependencies {
+    implementation project(':games')
 
     //Implementações básicas
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
-    implementation 'androidx.activity:activity:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation libs.bundles.essential
+    testImplementation libs.junit
+    androidTestImplementation libs.extJunit
+    androidTestImplementation libs.espressoCore
 
     //CardView
-    implementation "androidx.cardview:cardview:1.0.0"
+    implementation libs.cardview
 
     //RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.3.1"
+    implementation libs.recyclerview
 
     //Para o MVVM
-    def lifecycle_version = "2.6.1"
-
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
-    // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.1"
-
-    // Annotation processor
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation libs.bundles.lifecycle
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation libs.bundles.retrofit
 
     // Glide
-    def glide_version = "4.14.2"
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation libs.glide
+    kapt libs.glideCompiler
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation libs.hiltAndroid
+    kapt libs.hiltAndroidCompiler
 
     //Gson
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation libs.gson
 
     //Paging3
-    implementation "androidx.paging:paging-common:$paging_version"
+    implementation libs.pagingCommon
 
     //Javax Inject
-    implementation "javax.inject:javax.inject:1"
+    implementation libs.javaxInject
 
     //Coroutines core
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation libs.coroutinesCore
 
     // OkHttp
-    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
-    implementation("com.squareup.okhttp3:okhttp")
-    implementation("com.squareup.okhttp3:logging-interceptor")
-
-    // GsonConverterFactory
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation(platform(libs.okhttpBom))
+    implementation(libs.bundles.okhttpElements)
 }
