--- a/games/build.gradle
+++ b/games/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     implementation project(':base')
     implementation project(':core')
+    implementation project(':testingutils')
 
     implementation libs.bundles.essential
     testImplementation libs.junit
